@@ -25,3 +25,9 @@ def run_initial_sql(sender, **kwargs):
 
 post_migrate.connect(run_initial_sql, dispatch_uid="geotrek.core.sqlautoload")
 
+
+"""
+    Computed client-side setting.
+"""
+
+settings.LEAFLET_CONFIG['SPATIAL_EXTENT'] = api_bbox(settings.SPATIAL_EXTENT, buffer=0.1)
